[tool.poetry]
name = "DroptopFourBot"
version = "1.4.0"
description = "A bot for the official Droptop Four discord server"
authors = ["Bunz <bunzen@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
flask = "^2.0.1"
emojis = "^0.6.0"
replit = "^3.1.0"
pymongo = "^3.11.4"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
